--- a/RAS/primes/tests/Makefile.am
+++ b/RAS/primes/tests/Makefile.am
@@ -12,7 +12,18 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-lib_LTLIBRARIES = libprimes.la
-libprimes_la_SOURCES = primes.c
-libprimes_la_LIBADD = -lm
-include_HEADERS = primes.h
+check_PROGRAMS = is_prime_test_1 \
+		 is_prime_test_2 \
+		 is_prime_test_3 \
+		 is_prime_test_4
+
+AM_CFLAGS = -I$(top_srcdir)/src
+
+LDADD = $(top_builddir)/src/libprimes.la
+
+is_prime_test_1_SOURCES = is_prime_test_1.c
+is_prime_test_2_SOURCES = is_prime_test_2.c
+is_prime_test_3_SOURCES = is_prime_test_3.c
+is_prime_test_4_SOURCES = is_prime_test_4.c
+
+TESTS = $(check_PROGRAMS)
